Remove dependency on es6-defer.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "webpack": "^3.2.0"
   },
   "dependencies": {
-    "arrify": "^1.0.1",
-    "es6-defer": "^1.0.1"
+    "arrify": "^1.0.1"
   }
 }
