--- a/package.json
+++ b/package.json
@@ -30,18 +30,17 @@
   },
   "peerDependencies": {
     "material-ui": "^0.17.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "material-ui": "^0.17.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "webpack": "^3.2.0"
-  },
-  "dependencies": {
-    "arrify": "^1.0.1"
   }
 }
